--- a/Django-School-Management-System/apps/finance/templates/finance/invoice_list.html
+++ b/Django-School-Management-System/apps/finance/templates/finance/invoice_list.html
@@ -17,6 +17,7 @@
         <tr>
           <th>S/N</th>
           <th>invoice</th>
+          <th>Class</th>
           <th>Session-term</th>
           <th>Total Payable</th>
           <th>Total Paid</th>
@@ -30,6 +31,7 @@
           <tr class='clickable-row' data-href="{% url 'invoice-detail' invoice.id %}">
             <td>{{ forloop.counter}}</td>
             <td>{{ invoice}}</td>
+            <td>{{ invoice.class_for}}</td>
             <td>{{ invoice.session}}-{{ invoice.term}}</td>
             <td>{{ invoice.total_amount_payable | intcomma }}</td>
             <td>{{ invoice.total_amount_paid | intcomma }}</td>
