--- a/Django-School-Management-System/templates/base.html
+++ b/Django-School-Management-System/templates/base.html
@@ -57,11 +57,11 @@
           </a>
           <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
             <a href="#" class="dropdown-item">
-              <i class="fas fa-user mr-2"></i> Profile:-{{user}}
+              <i class="fas fa-user mr-2"></i> Profile:-{{user.first_name}}
             </a>
             <div class="dropdown-divider"></div>
-            <a href="{% url 'logout' %}" class="dropdown-item">
-              <i class="fas fa-sign-out"></i> Sign out
+            <a href="{% url 'logout' %}" class="dropdown-item" style="color:red">
+              <i class="fas fa-sign-out"></i> Sign out 
             </a>
           </div>
         </li>
